completed HTML & CSS

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>DestProtect</title>
   </head>
   <body class="bg-[#F3F4F6]">
-    <!-- Navbar -->
+    <!-- ***********************************************************  Navbar  ********************************************** -->
     <div class="flex flex-row p-5 max-w-[1700px] mx-auto container">
       <div class="w-1/2 flex flex-row">
         <a href="index.html">
@@ -49,7 +49,7 @@
       </div>
     </div>
 
-    <!-- Hero Section -->
+    <!-- ***********************************************************  Hero Section  **********************************************-->
     <div
       class="grid grid-cols-2 h-135 container mx-auto content-center items-center mb-15 mt-5"
     >
@@ -100,7 +100,7 @@
       </div>
     </div>
 
-    <!-- Service section -->
+    <!-- ***********************************************************  Service section  ********************************************** -->
     <div id="nos-services" class="bg-white">
       <div class="container mx-auto flex flex-col items-center">
         <div class="mt-20 flex items-center flex-col">
@@ -286,7 +286,7 @@
       </div>
     </div>
 
-    <!-- Service section -->
+    <!-- ***********************************************************     Pourquoi nous    **********************************************-->
     <div
       id="pourquoi-nous"
       class="container mx-auto flex flex-col items-center"
@@ -402,7 +402,7 @@
       </div>
     </div>
 
-    <!-- Ils nous ont fait confiance -->
+    <!-- ***********************************************************      Ils nous ont fait confiance     ********************************************** -->
 
     <div id="confiance" class="bg-white">
       <div class="container mx-auto flex flex-col items-center">
@@ -510,6 +510,291 @@
             <span class="text-red-600">10 entreprises</span> qui nous font déjà
             confiance
           </h1>
+        </div>
+      </div>
+    </div>
+
+    <!-- ***********************************************************      À propos de notre entreprise     ********************************************** -->
+
+    <div class="container mx-auto flex flex-col">
+      <div class="mb-10 mt-20">
+        <h1 class="text-3xl font-bold">À propos de notre entreprise</h1>
+        <div
+          class="absolute left-1/13 -translate-x-1/2 mt-2 w-1/15 h-1 bg-red-500"
+        ></div>
+      </div>
+      <div
+        class="container mx-auto grid grid-cols-2 gap-10 mb-20 items-center content-center"
+      >
+        <div>
+          <p class="mb-5 text-xl/6 font-thin">
+            Depuis notre création, nous nous engageons à fournir des solutions
+            de sécurité et de technologie de pointe pour protéger vos biens et
+            optimiser vos opérations. Notre mission est de vous offrir
+            tranquillité d'esprit et efficacité grâce à nos services
+            professionnels.
+          </p>
+          <p class="mb-5 text-xl/6 font-thin">
+            Nous combinons expertise technique, équipements de qualité et
+            service client exceptionnel pour garantir votre satisfaction. Que
+            vous soyez une petite entreprise ou une grande organisation, nous
+            avons les solutions adaptées à vos besoins
+          </p>
+          <div class="grid grid-cols-2 gap-5 mt-10 px-7">
+            <!-- Card 1 -->
+            <div class="flex flez-row gap-3">
+              <img src="images/tick.png" alt="tick" class="h-6 mt-1" />
+              <div>
+                <h1 class="text-xl font-normal mb-2">Qualité garantie</h1>
+                <p class="leading-5">
+                  Tous nos services et produits sont garantis pour vous assurer
+                  une satisfaction totale.
+                </p>
+              </div>
+            </div>
+            <!-- Card 2 -->
+            <div class="flex flez-row gap-3">
+              <img src="images/macaron.png" alt="macaron" class="h-6 mt-1" />
+              <div>
+                <h1 class="text-xl font-normal mb-2">Expertise certifiée</h1>
+                <p class="leading-5">
+                  Notre équipe est composée de professionnels certifiés dans
+                  leurs domaines respectifs.
+                </p>
+              </div>
+            </div>
+            <!-- Card 3 -->
+            <div class="flex flez-row gap-3">
+              <img src="images/macaron.png" alt="people" class="h-6 mt-1" />
+              <div>
+                <h1 class="text-xl font-normal mb-2">Service personnalisé</h1>
+                <p class="leading-5">
+                  Nous adaptons nos solutions à vos besoins spécifiques pour une
+                  efficacité maximale.
+                </p>
+              </div>
+            </div>
+            <!-- Card 4 -->
+            <div class="flex flez-row gap-3">
+              <img src="images/clock.png" alt="clock" class="h-6 mt-1" />
+              <div>
+                <h1 class="text-xl font-normal mb-2">Support 24/7</h1>
+                <p class="leading-5">
+                  Notre équipe de support est disponible 24h/24 et 7j/7 pour
+                  répondre à vos besoins.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="grid grid-cols-1 place-items-center">
+          <img
+            src="images/solaire2.png"
+            alt=""
+            class="rounded-lg w-full h-10/11"
+          />
+        </div>
+      </div>
+    </div>
+
+    <!-- ***********************************************************      contactez-nous     ********************************************** -->
+    <div class="bg-white">
+      <div class="container mx-auto flex flex-col items-center pt-20">
+        <img src="images/banner.png" alt="banner" class="w-2/4" />
+
+        <div class="mx-auto flex flex-col items-center mb-25">
+          <div class="mt-20 flex items-center flex-col">
+            <div class="mb-8">
+              <h1 class="text-3xl font-bold">Contactez-nous</h1>
+              <div
+                class="absolute left-1/2 -translate-x-1/2 mt-2 w-1/15 h-1 bg-red-500"
+              ></div>
+            </div>
+            <h2>
+              Vous avez des questions ou vous souhaitez obtenir un devis ?
+              N'hésitez pas à nous
+            </h2>
+            <h2>contacter, notre équipe est à votre disposition.</h2>
+          </div>
+        </div>
+
+        <!-- form -->
+        <div class="grid grid-cols-2 gap-8">
+          <div class="w-xl mb-20 shadow-lg/30 rounded-lg py-10 px-8">
+            <form action="">
+              <h1 class="font-bold text-gray-700">Envoyez-nous un message</h1>
+
+              <label for="name" class="block mt-5 mb-2">Nom complet</label>
+              <input
+                type="text"
+                id="name"
+                placeholder="Votre nom"
+                class="w-full p-2 border border-gray-300 rounded-lg"
+              />
+
+              <label for="email" class="block mt-5 mb-2">Email</label>
+              <input
+                type="email"
+                id="email"
+                placeholder="votre@email.com"
+                class="w-full p-2 border border-gray-300 rounded-lg"
+              />
+
+              <label for="subject" class="block mt-5 mb-2">Sujet</label>
+              <input
+                type="text"
+                id="Sujet"
+                placeholder="Sujet de votre message"
+                class="w-full p-2 border border-gray-300 rounded-lg"
+              />
+
+              <label for="message" class="block mt-5 mb-2">Message</label>
+              <input
+                type="text"
+                id="Sujet"
+                placeholder="Votre message"
+                class="w-full p-2 border border-gray-300 rounded-lg h-50 mb-5"
+              />
+              <button
+                class="w-full bg-red-600 px-8 py-4 rounded-lg text-white cursor-pointer hover:bg-red-500 transition-all duration-300"
+              >
+                Envoyer le message
+              </button>
+            </form>
+          </div>
+          <div
+            class="w-xl mb-20 shadow-lg/30 rounded-lg py-10 px-8 bg-red-50/40"
+          >
+            <h1 class="font-bold text-gray-700 mb-5">
+              Envoyez-nous un message
+            </h1>
+            <!-- info 1 -->
+            <div class="flex flez-row gap-3 mb-8">
+              <img src="images/location.png" alt="clock" class="h-10" />
+              <div>
+                <h1 class="text-lg font-bold">Notre adresse</h1>
+                <p class="text-base font-light">
+                  Immeuble SPC ancien ISESS, 5eme etage, porte 505
+                </p>
+              </div>
+            </div>
+
+            <!-- info 2 -->
+            <div class="flex flez-row gap-3 mb-8">
+              <img src="images/phone2.png" alt="clock" class="h-10" />
+              <div>
+                <h1 class="text-lg font-bold">Téléphone</h1>
+                <p class="text-base font-light">+237 6 79 10 29 09</p>
+                <p class="text-base font-light">+237 6 99 61 28 39</p>
+              </div>
+            </div>
+
+            <!-- info 3 -->
+            <div class="flex flez-row gap-3 mb-8">
+              <img src="images/mail.png" alt="clock" class="h-10" />
+              <div>
+                <h1 class="text-lg font-bold">Email</h1>
+                <p class="text-base font-light">ndongodestin@gmail.com</p>
+              </div>
+            </div>
+
+            <!-- info 4 -->
+            <div class="flex flez-row gap-3 mb-8">
+              <img src="images/clock2.png" alt="clock" class="h-10" />
+              <div>
+                <h1 class="text-lg font-bold">Heures d'ouverture</h1>
+                <p class="text-base font-light">
+                  Lundi - Vendredi: 8h00 - 18h00
+                </p>
+                <p class="text-base font-light">Samedi: 9h00 - 14h00</p>
+                <p class="text-base font-light">Dimanche: Fermé</p>
+              </div>
+            </div>
+
+            <h1 class="font-bold text-gray-700 mb-5">Suivez-nous</h1>
+
+            <!-- Media 1 -->
+            <div class="flex flez-row gap-3 mb-5">
+              <img src="images/facebook.png" alt="clock" class="h-10" />
+              <div>
+                <h1 class="text-lg font-bold">Dest Protect</h1>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- ***********************************************************      footer     ********************************************** -->
+    <div class="bg-[#111827]">
+      <div class="container mx-auto pt-15 w-10/12">
+        <div class="flex flex-row gap-10 justify-between mb-10">
+          <div class="flex flex-col">
+            <div class="w-1/2 flex flex-row mb-8">
+              <a href="index.html">
+                <img
+                  src="images/logo.png"
+                  alt="DestProtect Logo"
+                  class="w-25 h-15 filter contrast-300 brightness-65"
+                />
+              </a>
+              <a href="index.html" class="flex items-center ml-5">
+                <h1
+                  class="text-xl font-medium items-center cursor-pointer text-white"
+                >
+                  Dest Protect
+                </h1>
+              </a>
+            </div>
+            <h1 class="text-gray-500">
+              Solutions de sécurité et technologie professionnelles
+            </h1>
+            <h1 class="text-gray-500">
+              pour votre entreprise. Expertise, fiabilité et
+            </h1>
+            <h1 class="text-gray-500">innovation à votre service.</h1>
+          </div>
+          <div>
+            <h1
+              class="mb-5 text-xl font-medium items-center cursor-pointer text-white"
+            >
+              Liens rapides
+            </h1>
+            <h1 class="text-gray-500 mb-2">Accueil</h1>
+            <h1 class="text-gray-500 mb-2">Services</h1>
+            <h1 class="text-gray-500 mb-2">À propos</h1>
+            <h1 class="text-gray-500 mb-2">Contact</h1>
+          </div>
+          <div>
+            <h1
+              class="mb-8 text-xl font-medium items-center cursor-pointer text-white"
+            >
+              Nos services
+            </h1>
+            <h1 class="text-gray-500 mb-2">Vidéo surveillance</h1>
+            <h1 class="text-gray-500 mb-2">Alarmes</h1>
+            <h1 class="text-gray-500 mb-2">Contrôle d'accès</h1>
+            <h1 class="text-gray-500 mb-2">Réseaux informatiques</h1>
+          </div>
+          <div>
+            <h1
+              class="mb-8 text-xl font-medium items-center cursor-pointer text-white"
+            >
+              Contact
+            </h1>
+            <h1 class="text-gray-500 mb-2">
+              Immeuble SPC ancien ISESS, 5eme etage, porte 505
+            </h1>
+            <h1 class="text-gray-500 mb-2">Douala, Cameroun</h1>
+            <h1 class="text-gray-500 mb-2">+237 6 79 10 29 09</h1>
+            <h1 class="text-gray-500 mb-2">ndongodestin@gmail.com</h1>
+          </div>
+        </div>
+        <hr class="border-gray-500 mb-5" />
+        <div>
+          <p class="text-gray-500 pb-15">
+            © 2025 DP Security & Tech. Tous droits réservés.
+          </p>
         </div>
       </div>
     </div>
