--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <title>DestProtect</title>
+    <link rel="icon" type="image/png" href="images/logo.png" />
+
+    <title>Dest Protect</title>
   </head>
   <body class="bg-[#F3F4F6]">
     <!-- ***********************************************************  Navbar  ********************************************** -->
@@ -18,12 +20,14 @@
           />
         </a>
         <a href="index.html" class="flex items-center ml-5">
-          <h1 class="text-2xl font-extrabold items-center cursor-pointer">
+          <h1
+            class="text-xl md:text-2xl font-extrabold items-center cursor-pointer"
+          >
             Dest Protect
           </h1>
         </a>
       </div>
-      <div class="flex flex-row justify-end w-1/2">
+      <div class="hidden md:flex flex-row justify-end w-1/2">
         <div class="flex flex-row justify-between gap-10 items-center mr-10">
           <a
             href="#"
@@ -51,36 +55,39 @@
 
     <!-- ***********************************************************  Hero Section  **********************************************-->
     <div
-      class="grid grid-cols-2 h-135 container mx-auto content-center items-center mb-15 mt-5"
+      class="md:grid grid-cols-2 h-140 container mx-auto content-center items-center mb-15 mt-5"
     >
       <div class="container pl-7">
-        <h1 class="text-6xl/17 font-bold mb-4 font-bold">
+        <img src="images/circle.png" class="absolute animate-bounce md:" />
+        <h1
+          class="text-5xl font-bold mr-6 md:text-6xl/17 font-bold mb-4 font-bold"
+        >
           Solutions de <span class="text-red-600">sécurité</span> et
           <span class="text-red-600">technologie</span> pour votre entreprise
         </h1>
-        <h2 class="text-4xl font-extralight mb-5">
+        <h2 class="text-3xl mr-8 md:text-4xl font-extralight mb-5">
           "Votre sécurité, notre priorité absolue"
         </h2>
-        <p class="text-xl font-light">
+        <p class="mr-5 text-xl font-light">
           Protection complète et services technologiques adaptés à vos
         </p>
-        <p class="text-xl font-light mb-7">
+        <p class="mr-5 text-xl font-light mb-7">
           besoins. Expertise, fiabilité et innovation à votre service.
         </p>
-        <div class="flex flex-column gap-5 mb-8">
+        <div class="flex flex-column justify-start gap-5 mb-5 md:mb-8">
           <a
             href="#nos-services"
-            class="bg-red-600 px-8 py-4 rounded-lg text-white cursor-pointer hover:bg-red-500 transition-all duration-300"
+            class="bg-red-600 px-5 md:px-8 py-4 rounded-lg text-white cursor-pointer hover:bg-red-500 transition-all duration-300"
           >
             Nos services
           </a>
           <button
-            class="bg-transparent border-2 border-red-500 px-8 py-4 rounded-lg cursor-pointer hover:bg-red-100"
+            class="bg-transparent border-2 border-red-500 px-5 md:px-8 py-4 rounded-lg cursor-pointer hover:bg-red-100"
           >
             Contactez-nous
           </button>
         </div>
-        <div class="flex flex-column gap-5 items-center">
+        <div class="flex flex-column items-center md:gap-5">
           <div class="flex flex-row gap-2 items-center pr-5">
             <img src="images/guard.png" class="w-6 h-6" />
             <p>Protection garantie</p>
@@ -91,7 +98,12 @@
           </div>
         </div>
       </div>
-      <div class="grid justify-center items-center">
+      <div class="hidden md:grid justify-center items-center relative">
+        <img
+          src="images/circle.png"
+          alt="circle"
+          class="absolute z-2 right-0 bottom-0 animate-bounce"
+        />
         <img
           src="images/Image.png"
           alt=""
@@ -103,23 +115,25 @@
     <!-- ***********************************************************  Service section  ********************************************** -->
     <div id="nos-services" class="bg-white">
       <div class="container mx-auto flex flex-col items-center">
-        <div class="mt-20 flex items-center flex-col">
+        <div class="mx-5 mt-20 flex items-center flex-col">
           <div class="mb-8">
             <h1 class="text-3xl font-bold">Nos Services</h1>
             <div
               class="absolute left-1/2 -translate-x-1/2 mt-2 w-1/15 h-1 bg-red-500"
             ></div>
           </div>
-          <h2>
+          <h2 class="text-center md:">
             Nous proposons une gamme complète de services de sécurité et de
             technologies pour
           </h2>
-          <h2>répondre aux besoins spécifiques de votre entreprise.</h2>
+          <h2 class="text-center md:">
+            répondre aux besoins spécifiques de votre entreprise.
+          </h2>
         </div>
 
         <!-- Cards -->
 
-        <div class="grid grid-cols-3 gap-10 mt-10 mb-10">
+        <div class="grid mx-10 md:grid-cols-3 gap-10 mt-10 mb-10">
           <!-- Card 1 -->
           <div class="shadow-lg rounded-b-lg">
             <img
@@ -241,7 +255,7 @@
             </div>
           </div>
         </div>
-        <div class="grid grid-cols-2 gap-10 mb-10">
+        <div class="grid mx-10 md:grid-cols-2 gap-10 mb-10">
           <!-- Card 7 -->
           <div class="shadow-lg rounded-b-lg">
             <img
@@ -298,15 +312,15 @@
             class="absolute left-1/2 -translate-x-1/2 mt-2 w-1/15 h-1 bg-red-500"
           ></div>
         </div>
-        <h2>
+        <h2 class="mx-5 text-center md:">
           Découvrez ce qui fait de DestProtect le partenaire idéal pour la
           sécurité et la
         </h2>
         <h2>technologie de votre entreprise.</h2>
       </div>
-      <div class="grid grid-cols-3 gap-10 mt-10 mb-10">
+      <div class="gap-10 grid md:grid-cols-3 gap-10 mt-10 mb-10">
         <!-- Card 1 -->
-        <div class="shadow-lg/20 rounded-lg bg-white">
+        <div class="py-3 shadow-lg/20 rounded-lg bg-white md:">
           <div class="mt-4 px-5">
             <div class="flex flex-row">
               <img src="images/shield.png" class="mr-5 h-15" />
@@ -317,11 +331,11 @@
             <p class="mt-2 text-sm text-gray-600">
               Plus de 15 ans d'expérience dans la sécurité et
             </p>
-            <p class="mt-0 mb-10 text-sm text-gray-600">la technologie</p>
+            <p class="mt-0 md:mb-10 text-sm text-gray-600">la technologie</p>
           </div>
         </div>
         <!-- Card 2 -->
-        <div class="shadow-lg/20 rounded-lg bg-white">
+        <div class="py-3 shadow-lg/20 rounded-lg bg-white md:">
           <div class="mt-4 px-5">
             <div class="flex flex-row">
               <img src="images/time.png" class="mr-5 h-15" />
@@ -332,13 +346,13 @@
             <p class="mt-2 text-sm text-gray-600">
               Support technique et intervention d'urgence
             </p>
-            <p class="mt-0 mb-10 text-sm text-gray-600">
+            <p class="mt-0 md:mb-10 text-sm text-gray-600">
               disponibles jour et nuit
             </p>
           </div>
         </div>
         <!-- Card 3 -->
-        <div class="shadow-lg/20 rounded-lg bg-white">
+        <div class="py-3 shadow-lg/20 rounded-lg bg-white md:">
           <div class="mt-4 px-5">
             <div class="flex flex-row">
               <img src="images/ppl.png" class="mr-5 h-15" />
@@ -349,13 +363,13 @@
             <p class="mt-2 text-sm text-gray-600">
               Techniciens certifiés et régulièrement formés
             </p>
-            <p class="mt-0 mb-10 text-sm text-gray-600">
+            <p class="mt-0 md:mb-10 text-sm text-gray-600">
               aux dernières technologies
             </p>
           </div>
         </div>
         <!-- Card 4 -->
-        <div class="shadow-lg/20 rounded-lg bg-white">
+        <div class="py-3 shadow-lg/20 rounded-lg bg-white md:">
           <div class="mt-4 px-5">
             <div class="flex flex-row">
               <img src="images/cube.png" class="mr-5 h-15" />
@@ -366,11 +380,11 @@
             <p class="mt-2 text-sm text-gray-600">
               Systèmes personnalisés adaptés à vos besoins
             </p>
-            <p class="mt-0 mb-10 text-sm text-gray-600">spécifiques</p>
+            <p class="mt-0 md:mb-10 text-sm text-gray-600">spécifiques</p>
           </div>
         </div>
         <!-- Card 5 -->
-        <div class="shadow-lg/20 rounded-lg bg-white">
+        <div class="py-3 shadow-lg/20 rounded-lg bg-white md:">
           <div class="mt-4 px-5">
             <div class="flex flex-row">
               <img src="images/hand.png" class="mr-5 h-15" />
@@ -381,11 +395,13 @@
             <p class="mt-2 text-sm text-gray-600">
               Accompagnement personnalisé et suivi régulier
             </p>
-            <p class="mt-0 mb-10 text-sm text-gray-600">de vos installations</p>
+            <p class="mt-0 md:mb-10 text-sm text-gray-600">
+              de vos installations
+            </p>
           </div>
         </div>
         <!-- Card 6 -->
-        <div class="shadow-lg/20 rounded-lg bg-white">
+        <div class="py-3 shadow-lg/20 rounded-lg bg-white md:">
           <div class="mt-4 px-5">
             <div class="flex flex-row">
               <img src="images/hand.png" class="mr-5 h-15" />
@@ -396,7 +412,6 @@
             <p class="mt-2 text-sm text-gray-600">
               Engagement qualité et résultats garantis
             </p>
-            <p class="mt-0 mb-10 text-sm text-gray-600"></p>
           </div>
         </div>
       </div>
@@ -414,14 +429,14 @@
                 class="absolute left-1/2 -translate-x-1/2 mt-2 w-1/15 h-1 bg-red-500"
               ></div>
             </div>
-            <h2>
+            <h2 class="text-center md:">
               Découvrez quelques-unes des entreprises qui ont choisi nos
               solutions pour leur sécurité et
             </h2>
             <h2>leur infrastructure technologique.</h2>
           </div>
         </div>
-        <div class="grid grid-cols-4 gap-10 mt-10 mb-10 w-4/5">
+        <div class="grid md:grid-cols-4 gap-10 mt-10 mb-10 w-4/5">
           <!-- Card 1 -->
           <div class="shadow-lg rounded-b-lg bg-blue">
             <div class="flex justify-center items-center">
@@ -504,8 +519,8 @@
             </div>
           </div>
         </div>
-        <div class="pb-10">
-          <h1>
+        <div class="pb-10 mx-5 md:">
+          <h1 class="text-center md:">
             Rejoignez plus de
             <span class="text-red-600">10 entreprises</span> qui nous font déjà
             confiance
@@ -517,30 +532,30 @@
     <!-- ***********************************************************      À propos de notre entreprise     ********************************************** -->
 
     <div class="container mx-auto flex flex-col">
-      <div class="mb-10 mt-20">
+      <div class="mb-10 mt-20 mx-5 md:">
         <h1 class="text-3xl font-bold">À propos de notre entreprise</h1>
         <div
-          class="absolute left-1/13 -translate-x-1/2 mt-2 w-1/15 h-1 bg-red-500"
+          class="w-4/15 left-2/13 md: w-1/15 left-1/13 absolute -translate-x-1/2 mt-2 h-1 bg-red-500"
         ></div>
       </div>
       <div
-        class="container mx-auto grid grid-cols-2 gap-10 mb-20 items-center content-center"
+        class="container mx-auto md:grid grid-cols-2 gap-10 mb-20 items-center content-center"
       >
         <div>
-          <p class="mb-5 text-xl/6 font-thin">
+          <p class="mb-5 mx-5 text-xl/6 font-thin md:">
             Depuis notre création, nous nous engageons à fournir des solutions
             de sécurité et de technologie de pointe pour protéger vos biens et
             optimiser vos opérations. Notre mission est de vous offrir
             tranquillité d'esprit et efficacité grâce à nos services
             professionnels.
           </p>
-          <p class="mb-5 text-xl/6 font-thin">
+          <p class="mb-5 mx-5 text-xl/6 font-thin md:">
             Nous combinons expertise technique, équipements de qualité et
             service client exceptionnel pour garantir votre satisfaction. Que
             vous soyez une petite entreprise ou une grande organisation, nous
             avons les solutions adaptées à vos besoins
           </p>
-          <div class="grid grid-cols-2 gap-5 mt-10 px-7">
+          <div class="grid md:grid-cols-2 gap-5 mt-10 px-7">
             <!-- Card 1 -->
             <div class="flex flez-row gap-3">
               <img src="images/tick.png" alt="tick" class="h-6 mt-1" />
@@ -587,7 +602,7 @@
             </div>
           </div>
         </div>
-        <div class="grid grid-cols-1 place-items-center">
+        <div class="mx-5 mt-8 grid grid-cols-1 place-items-center md:">
           <img
             src="images/solaire2.png"
             alt=""
@@ -599,8 +614,8 @@
 
     <!-- ***********************************************************      contactez-nous     ********************************************** -->
     <div class="bg-white">
-      <div class="container mx-auto flex flex-col items-center pt-20">
-        <img src="images/banner.png" alt="banner" class="w-2/4" />
+      <div class="container mx-auto flex flex-col items-center pt-10 md:pt-20">
+        <img src="images/banner.png" alt="banner" class="h-50 md:w-2/4" />
 
         <div class="mx-auto flex flex-col items-center mb-25">
           <div class="mt-20 flex items-center flex-col">
@@ -610,7 +625,7 @@
                 class="absolute left-1/2 -translate-x-1/2 mt-2 w-1/15 h-1 bg-red-500"
               ></div>
             </div>
-            <h2>
+            <h2 class="mx-5 text-center md:">
               Vous avez des questions ou vous souhaitez obtenir un devis ?
               N'hésitez pas à nous
             </h2>
@@ -619,10 +634,12 @@
         </div>
 
         <!-- form -->
-        <div class="grid grid-cols-2 gap-8">
-          <div class="w-xl mb-20 shadow-lg/30 rounded-lg py-10 px-8">
+        <div class="grid justify-items-center md:grid-cols-2 gap-8">
+          <div class="w-80 md:w-xl mb-20 shadow-lg/30 rounded-lg py-10 px-8">
             <form action="">
-              <h1 class="font-bold text-gray-700">Envoyez-nous un message</h1>
+              <h1 class="font-bold text-gray-700 text-center md:">
+                Envoyez-nous un message
+              </h1>
 
               <label for="name" class="block mt-5 mb-2">Nom complet</label>
               <input
@@ -663,7 +680,7 @@
             </form>
           </div>
           <div
-            class="w-xl mb-20 shadow-lg/30 rounded-lg py-10 px-8 bg-red-50/40"
+            class="w-80 md:w-xl mb-20 shadow-lg/30 rounded-lg py-10 px-8 bg-red-50/40"
           >
             <h1 class="font-bold text-gray-700 mb-5">
               Envoyez-nous un message
@@ -728,7 +745,7 @@
     <!-- ***********************************************************      footer     ********************************************** -->
     <div class="bg-[#111827]">
       <div class="container mx-auto pt-15 w-10/12">
-        <div class="flex flex-row gap-10 justify-between mb-10">
+        <div class="flex flex-col md:flex-row gap-10 justify-between mb-10">
           <div class="flex flex-col">
             <div class="w-1/2 flex flex-row mb-8">
               <a href="index.html">
