--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="src/output.css" />
     <link rel="icon" type="image/png" href="images/logo.png" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
     <title>Dest Protect</title>
   </head>
   <body class="bg-[#F3F4F6]">
@@ -723,49 +724,52 @@
         <div class="grid justify-items-center lg:grid-cols-2 gap-8">
           <div
             data-aos="fade-right"
-            class="w-80 sm:w-100 md:w-xl mb-20 shadow-lg/30 rounded-lg px-8 py-10 lg:w-115 xl:w-150"
+            class="sm:w-100 md:w-xl mb-20 shadow-lg/30 rounded-lg px-8 py-10 lg:w-115 xl:w-150"
           >
-            <form action="">
-              <h1 class="font-bold text-gray-700 text-center sm:">
-                Envoyez-nous un message
-              </h1>
-
-              <label for="name" class="block mt-5 mb-2">Nom complet</label>
-              <input
-                type="text"
-                id="name"
-                placeholder="Votre nom"
-                class="w-full p-2 border border-gray-300 rounded-lg"
-              />
-
-              <label for="email" required class="block mt-5 mb-2">Email</label>
-              <input
-                type="email"
-                id="email"
-                placeholder="votre@email.com"
-                class="w-full p-2 border border-gray-300 rounded-lg"
-              />
-
-              <label for="subject" class="block mt-5 mb-2">Sujet</label>
-              <input
-                type="text"
-                id="Sujet"
-                placeholder="Sujet de votre message"
-                class="w-full p-2 border border-gray-300 rounded-lg"
-              />
-
-              <label for="message" class="block mt-5 mb-2">Message</label>
-              <textarea
-                required
-                id="Sujet"
-                placeholder="Votre message..."
-                class="w-full border border-gray-300 rounded-lg h-50 mb-5 p-2"
-              ></textarea>
-              <button
-                class="w-full bg-red-600 px-8 py-4 rounded-lg text-white cursor-pointer hover:bg-red-500 transition-all duration-300"
-              >
-                Envoyer le message
-              </button>
+            <form id="contactform" action="" class="relative h-full">
+              <div id="form-div" class="">
+                <h1 class="font-bold text-gray-700 text-center sm:">
+                  Envoyez-nous un message
+                </h1>
+                <label for="name" class="block mt-5 mb-2">Nom complet</label>
+                <input
+                  required
+                  type="text"
+                  id="name"
+                  placeholder="Votre nom"
+                  class="w-full p-2 border border-gray-300 rounded-lg"
+                />
+                <label for="email" required class="block mt-5 mb-2"
+                  >Email</label
+                >
+                <input
+                  required
+                  type="email"
+                  id="email"
+                  placeholder="votre@email.com"
+                  class="w-full p-2 border border-gray-300 rounded-lg"
+                />
+                <label for="subject" class="block mt-5 mb-2">Sujet</label>
+                <input
+                  required
+                  type="text"
+                  id="Sujet"
+                  placeholder="Sujet de votre message"
+                  class="w-full p-2 border border-gray-300 rounded-lg"
+                />
+                <label for="message" class="block mt-5 mb-2">Message</label>
+                <textarea
+                  required
+                  id="Sujet"
+                  placeholder="Votre message..."
+                  class="w-full border border-gray-300 rounded-lg h-50 mb-5 p-2"
+                ></textarea>
+                <button
+                  class="w-full bg-red-600 px-8 py-4 rounded-lg text-white cursor-pointer hover:bg-red-500 transition-all duration-300"
+                >
+                  Envoyer le message
+                </button>
+              </div>
             </form>
           </div>
           <div
@@ -915,12 +919,16 @@
         offset: 120,
         delay: 0,
         mirror: true,
-        disable: "mobile", // Can be 'mobile', 'tablet', or a function
+        disable: "mobile",
         startEvent: "DOMContentLoaded",
         throttleDelay: 99,
         debounceDelay: 50,
       });
     </script>
     <script src="scripts.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    <script>
+      emailjs.init("WK6_Oe-0lH1sGZrgI");
+    </script>
   </body>
 </html>
