Added major modifications to scroll animation

--- a/index.html
+++ b/index.html
@@ -919,7 +919,7 @@
         offset: 120,
         delay: 0,
         mirror: true,
-        disable: "mobile",
+        disable: "none",
         startEvent: "DOMContentLoaded",
         throttleDelay: 99,
         debounceDelay: 50,
