Fixed responsive bugs

--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
         <div class="grid justify-items-center lg:grid-cols-2 gap-8">
           <div
             data-aos="fade-right"
-            class="sm:w-100 md:w-xl mb-20 shadow-lg/30 rounded-lg px-8 py-10 lg:w-115 xl:w-150"
+            class="w-80 sm:w-100 md:w-xl mb-20 shadow-lg/30 rounded-lg px-8 py-10 lg:w-115 xl:w-150"
           >
             <form id="contactform" action="" class="relative h-full">
               <div id="form-div" class="">
